<resources>

    <string name="app_name">Political Empathy</string>

    <string-array name = "authors">
        <item>Jimmy Carter</item>
        <item>Bill Clinton</item>
        <item>John F. Kennedy</item>
        <item>Abraham Lincoln</item>
        <item>Barack Obama</item>
        <item>Rand Paul</item>
        <item>Ronald Reagan</item>
        <item>Theodore Roosevelt</item>
        <item>Marco Rubio</item>
        <item>Bernie Sanders</item>
    </string-array>

    <string name="start">Start</string>
    <string name="political_empathy">Political Empathy</string>
    <string name="logo_arrows">logo arrows</string>
    <string name="take_the_political_tolerance_quiz_to_understand_your_open_mindedness">Take the political tolerance survey to understand your open-mindedness.</string>
    <string name="resources_to_improve_open_mindedness_and_deal_with_political_intolerance">Resources to improve open-mindedness and deal with political intolerance.</string>
    <string name="take_the_political_quote_quiz_to_assess_your_political_views">Take the political quote survey to assess your political views.</string>
    <string name="view_resources">View resources</string>
    <string name="start_tolerance_quiz">Start tolerance survey</string>
    <string name="start_quote_quiz">Start quote survey</string>
    <string name="strongly_disagree">Strongly disagree</string>
    <string name="somewhat_agree">Somewhat agree</string>
    <string name="strongly_agree">Strongly agree</string>
    <string name="somewhat_disagree">Somewhat disagree</string>
    <string name="q1_text">q1 text</string>
    <string name="quote_1">Quote 1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginbutton">Login</string>
    <string name="registeroption">Register</string>
    <string name="logintextforbutton">LOGIN</string>
    <string name="user_emailtextdescription">User Email:</string>
    <string name="passwordtextdescription">Password:</string>
    <string name="forgot_password_option">Forgot Password?</string>
    <string name="registerbuttontext">REGISTER</string>
    <string name="full_nametext">Full Name:</string>
    <string name="agetext">Age:</string>
    <string name="politicalempathylogoregister">Political Empathy</string>
    <string name="logoforpoliticalempathy">logoforpoliticalempathy</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_a_password">Create a password</string>
    <string name="log_out_main_menu">Log Out</string>
    <string name="resetpasswordbuttontext">RESET PASSWORD</string>
    <string name="homeiconmenu">Home</string>
    <string name="scoresiconmenu">Scores</string>
    <string name="profileiconmenu">Profile</string>
</resources>