<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".RegisterUserActivity">


    <TextView
        android:id="@+id/logotextthin"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="@font/barlowboldx"
        android:paddingTop="70dp"
        android:text="@string/politicalempathylogoregister"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconforregistration"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:contentDescription="@string/logoforpoliticalempathy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/fullwhiteicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userfullnametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/full_nametext"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userfullnamevalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/medgray"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
             />

        <TextView
            android:id="@+id/useragetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/agetext"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/useragevalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/medgray"
            android:hint="@string/enter_your_age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/useremailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/user_emailtextdescription"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/useremailregistervalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/medgray"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/passwordtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/passwordtextdescription"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/userpasswordregistervalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/medgray"
            android:hint="@string/create_a_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/registerbuttonid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/pink"
            android:text="@string/registerbuttontext"
            android:textSize="20sp" />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>