<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".QuoteActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/lightgray"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/quotenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/quote_1"
            android:background="@color/darkgray"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/quotetext"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/q1_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/stronglyagree1aa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:padding="16dp"
            android:elevation="3dp"
            android:text="@string/strongly_agree"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!-- android:background="@drawable/agree_button_format"-->

        <Button
            android:id="@+id/somewhatagree1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_700"
            android:padding="16dp"
            android:elevation="3dp"
            android:text="@string/somewhat_agree"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!-- android:background="@drawable/agree_button_format"-->
        <Button
            android:id="@+id/somewhatdisagree1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B2387E"
            android:padding="16dp"
            android:elevation="3dp"
            android:text="@string/somewhat_disagree"
            android:textSize="18sp"
            android:textStyle="bold" />
        <!-- android:background="@drawable/agree_button_format"-->
        <Button
            android:id="@+id/stronglydisagree1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B2387E"
            android:padding="16dp"
            android:elevation="3dp"
            android:text="@string/strongly_disagree"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- android:background="@drawable/agree_button_format"-->

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>