<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">


    <TextView
        android:id="@+id/logotextforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/design_default_color_primary"
        android:fontFamily="@font/barlowboldx"
        android:paddingTop="70dp"
        android:text="@string/politicalempathylogoregister"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconforforgotpassword"
        android:layout_width="50dp"
        android:layout_height="59dp"
        android:contentDescription="@string/logoforpoliticalempathy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/fullwhiteicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/useremailtextforgotpasswordtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/user_emailtextdescription"
            android:textColor="@color/pink"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/useremailforgotpasswordvalue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:backgroundTint="@color/medgray"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/resetpasswrodid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/pink"
            android:text="@string/resetpasswordbuttontext"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginreturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/black"
            android:text="Return To Login"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>